--- a/Back/package.json
+++ b/Back/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "google-auth-library": "^1.6.1",
     "mysql": "^2.16.0"
   }
 }
