--- a/Front/package.json
+++ b/Front/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^6.0.3",
     "angular-6-social-login": "^1.1.1",
     "core-js": "^2.5.4",
+    "ngx-socket-io": "^1.1.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
