--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-6-social-login": "^1.1.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ngx-socket-io": "^1.1.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
