--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.4.5",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
@@ -24,6 +25,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-socket-io": "^1.1.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
