--- a/Back/package.json
+++ b/Back/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/NeilRittner/InsightCalendar#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-redis": "^3.3.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
