--- a/Front/package.json
+++ b/Front/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "hoek": "^5.0.4",
     "ngx-bootstrap": "^3.0.1",
     "ngx-socket-io": "^1.1.1",
     "rxjs": "^6.0.0",
