--- a/Front/package.json
+++ b/Front/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@types/socket.io-client": "^1.4.32",
     "angular-6-social-login": "^1.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -35,6 +36,7 @@
     "ngx-socket-io": "^1.1.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
