--- a/Back/package.json
+++ b/Back/package.json
@@ -21,6 +21,7 @@
     "connect-redis": "^3.3.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
+    "events": "^3.0.0",
     "express": "^4.16.3",
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
