Modification: clean (not finished), error handling

--- a/Front/package.json
+++ b/Front/package.json
@@ -36,6 +36,7 @@
     "ng6-socket-io": "^1.0.3",
     "ngx-bootstrap": "^3.0.1",
     "ngx-socket-io": "^1.1.1",
+    "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "socket.io-client": "^2.1.1",
